@@ -99,20 +99,24 @@ AC_MSG_CHECKING([for supported architecture])
 case "$host_cpu" in
 i[[3456]]86|pentium)
         arch=i386
+        MOSH_OPTS="-03 -momit-leaf-frame-pointer -fomit-frame-pointer"
         AC_MSG_RESULT([$host_cpu])
         AC_DEFINE([ARCH_IA32], 1, [Define for the IA32 architecture.])
         ;;
 x86?64*)
         arch=x86_64
+        MOSH_OPTS="-03 -momit-leaf-frame-pointer -fomit-frame-pointer"
         AC_MSG_RESULT([x86_64])
         AC_DEFINE([ARCH_X86_64], 1, [Define for the AMD x86-64 architecture.])
         ;;
 *)
         AC_MSG_RESULT([$host_cpu])
+        MOSH_OPTS="-O3"
         AC_MSG_WARN([architecture $host_cpu is not supported, but may work other than FFI])
         AC_DEFINE([ARCH_UNKNOWN], 1, [Define for the AMD x86-64 architecture.])
         ;;
 esac
+AC_SUBST(MOSH_OPTS)
 
 AC_ARG_WITH(mysql,
   AC_HELP_STRING([--with-mysql=FULL_PATH_TO_libmysqlclient]),
